fixed spacing for category
yes

--- a/css/digitalMarketing.css
+++ b/css/digitalMarketing.css
@@ -131,7 +131,7 @@ section{
     font-size: 1.025em;
     letter-spacing: 0.065em;
     color: rgba(218, 211, 211, 0.7);
-    left: 38%;
+    left: 37.25%;
     top: 95%;
 }
 
