--- a/css/mediaProduction.css
+++ b/css/mediaProduction.css
@@ -180,7 +180,7 @@ section{
     font-size: 1.025em;
     letter-spacing: 0.065em;
     color: rgba(218, 211, 211, 0.7);
-    left: 20%;
+    left: 21.75%;
     top: 163%;
 }
 
