--- a/css/websiteApps.css
+++ b/css/websiteApps.css
@@ -131,8 +131,8 @@ section{
     font-size: 1em;
     letter-spacing: 0.065em;
     color: rgba(218, 211, 211, 0.7);
-    left: 38%;
-    top: 83%;
+    left: 37.25%;
+    top: 90%;
 }
 
 .blur4 {
